Finished Docs and added readme, license and more
