# api/civilzations.go
@@ -8,6 +8,15 @@ import (
 	"github.com/labstack/echo/v4"
 )
 
+// GetCivilizations godoc
+// @Description Get's all civilizations available to play in civ 6
+// @Tags leaders
+// @Accept */*
+// @Produce json
+// @Param limit query int false "limits amount of results returned"
+// @Success 200 {object} []database.Civilization
+// @Failure 400 {object} string "Invalid limit value"
+// @Router /api/v1/civilizations [get]
 func (r *Router) GetCivlizations(c echo.Context) error {
 	civs := r.db.Civilizations
 
@@ -25,6 +34,14 @@ func (r *Router) GetCivlizations(c echo.Context) error {
 	}
 }
 
+// GetCivilization godoc
+// @Description Gets a civilization in civ 6 based on a given name
+// @Tags leaders
+// @Accept */*
+// @Produce json
+// @Param name path string true "civilization to get"
+// @Success 200 {object} database.Civilization
+// @Router /api/v1/civilizations/{name} [get]
 func (r *Router) GetCivilzation(c echo.Context) error {
 	name := c.Param("name")
 	name = strings.ReplaceAll(name, "%20", " ")
