# docs/swagger.json
@@ -6,7 +6,6 @@
     "info": {
         "description": "A free-to-use API to access information about Sid Meier's Civilization VI",
         "title": "Rulers Compendium API",
-        "termsOfService": "https://github.com/grqphical07/rulers-compendium/blob/main/TERMS.md",
         "contact": {
             "name": "grqphical",
             "url": "https://github.com/grqphical07"
@@ -20,23 +19,71 @@
     "host": "localhost:8000",
     "basePath": "/api/v1",
     "paths": {
-        "/api/v1/": {
+        "/api/v1/civilizations": {
             "get": {
-                "description": "Get the status of the API Server",
+                "description": "Get's all civilizations available to play in civ 6",
                 "consumes": [
                     "*/*"
                 ],
                 "produces": [
-                    "text/plain"
+                    "application/json"
                 ],
                 "tags": [
-                    "root"
+                    "leaders"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "limits amount of results returned",
+                        "name": "limit",
+                        "in": "query"
+                    }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/database.Civilization"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid limit value",
+                        "schema": {
                             "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/civilizations/{name}": {
+            "get": {
+                "description": "Gets a civilization in civ 6 based on a given name",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "leaders"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "civilization to get",
+                        "name": "name",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/database.Civilization"
                         }
                     }
                 }
@@ -82,6 +129,37 @@
                         "description": "Invalid limit value",
                         "schema": {
                             "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/districts/{name}": {
+            "get": {
+                "description": "Gets a district by name in civ 6",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "districts"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "district to find",
+                        "name": "name",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/database.District"
                         }
                     }
                 }
@@ -187,6 +265,29 @@
                 }
             }
         },
+        "database.Civilization": {
+            "type": "object",
+            "properties": {
+                "ability": {
+                    "$ref": "#/definitions/database.Ability"
+                },
+                "infrastructure": {
+                    "type": "string"
+                },
+                "leaders": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                },
+                "unit": {
+                    "type": "string"
+                }
+            }
+        },
         "database.District": {
             "type": "object",
             "properties": {
@@ -197,6 +298,9 @@
                     }
                 },
                 "description": {
+                    "type": "string"
+                },
+                "exclusive_to": {
                     "type": "string"
                 },
                 "name": {
@@ -220,6 +324,9 @@
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "unit": {
                     "type": "string"
                 }
             }
